[metadata]
name = protobuf-custom-build
version = 0.0.1
author = Sam Brotherton
author_email = sam@cairnlabs.com
description = Custom build step for protobuf packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbrother/protobuf-custom-build
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    
[options]
packages = find_namespace:

[options.entry_points]
distutils.commands =
	protobuf-custom-build = custom.build:Command
